fixed lane spacing

--- a/front_end/src/App.css
+++ b/front_end/src/App.css
@@ -97,12 +97,15 @@ h3 {
 .react-trello-board {
   background-color: rgb(211, 249, 230) !important;
   width: 100% !important;
-  margin-top: 50px !important;
+  margin-top: 40px !important;
 }
 
 /* .react-trello-lane {
   background-color: red !important;
 } */
+.dtXYJt{
+  margin: 2vw !important;
+}
 
 .add_job_button {
   border: solid 1px black !important;
@@ -133,7 +136,7 @@ section {
   border-radius: 10px !important;
   border: solid 2px black;
   /* display: fluid; */
-  /* width: 25%; */
+  width: 400px;
   /* margin-inline: 20px !important; */
   padding-inline: 0px !important;
 }
@@ -142,8 +145,9 @@ article {
   background-color: rgba(141, 221, 141, 0.929)!important;
   border: solid 1px black !important;
   border-radius: 5px !important;
-  margin: 3% !important;
-  width: 94% !important;
+  margin: 10px !important;
+  width: 380px !important;
+  max-width: 400px!important;
 }
 
 body {
